# Meal-Planner

./: .dockerignore  .env  Dockerfile  README.md  main.py  pyproject.toml  stemming.ipynb  test_grocery_shopping_list_aggregation.ipynb
inputs/: data_base_connection.py  fetch_meals.py  fetch_user_pecific_needs.py  read_from_database.py
output/: meal_plan_presenter.py
processing/: meal_planner.py
