[tool.poetry]
name = "meal-planner"
version = "0.1.0"
description = "This project aims to build an application that sugguests costumized meal plans for their users."
authors = ["Pascal Spors <pascal.spors@gmx.de>"]
license = "MIT" 
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  
requests = "^2.25.1"  
numpy = "^1.21"
pandas = "^1.5.0"
nltk = "^3.9.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"